# Personal-Search-Engine

./: README.md  azure_deployment_guide.md  azure_vm_deployment_guide.md  cloudbuild-backend.yaml  cloudbuild-frontend.yaml  deployment_guide.md  docker-compose.yml  gcp_deployment_guide.md
Backend/: .env  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  version.txt
Backend/app/: config.py  ingest.py  main.py
Backend/chroma_db/: chroma.sqlite3
Frontend/: Dockerfile  README.md  cloudbuild.yaml  index.html  nginx.conf  package-lock.json  tailwind.config.js
Frontend/src/: App.css  App.tsx  index.css
